--- a/package.json
+++ b/package.json
@@ -4,16 +4,31 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "seed": "ts-node src/index.ts"
+    "prisma": "prisma generate && prisma migrate dev --name init",
+    "seed": "ts-node src/seeder/seeder.ts",
+    "dev": "nodemon src/index.ts --exec ts-node",
+    "build": "tsc",
+    "start": "rimraf dist && npm run build && node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.1",
+    "cloudinary": "^1.33.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "rimraf": "^3.0.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@prisma/client": "^4.8.0",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.15",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^18.11.17",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "cheerio": "^1.0.0-rc.12",
@@ -22,7 +37,9 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.6.0",
     "eslint-plugin-promise": "^6.1.1",
+    "nodemon": "^2.0.20",
+    "prisma": "^4.8.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.7.3"
   }
 }
